force-app/main/default/objects/Activity/fields/Acontecer_alguma_troca_de_modelo_ou__c.field-meta.xml
<CustomField>
    <fullName>Acontecer_alguma_troca_de_modelo_ou__c</fullName>
    <inlineHelpText>Acontecerá alguma troca de modelo ou entrega parcial? Responda de forma 
completa e com datas;</inlineHelpText>
    <label>Acontecerá alguma troca de modelo ou...?</label>
    <type>TextArea</type>
</CustomField>