force-app/main/default/objects/Activity/fields/Adicionar_ao_Scrum__c.field-meta.xml
<CustomField>
    <fullName>Adicionar_ao_Scrum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adicionar ao Scrum</label>
    <type>Checkbox</type>
</CustomField>