force-app/main/default/objects/Activity/fields/Assunto_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Assunto_da_Visita__c</fullName>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>