force-app/main/default/objects/Activity/fields/Atingido__c.field-meta.xml
<CustomField>
    <fullName>Atingido__c</fullName>
    <formula>Atingido_valor__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atingido(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>