force-app/main/default/objects/Activity/fields/Atribu_do__c.field-meta.xml
<CustomField>
    <fullName>Atribu_do__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atribuído</label>
    <type>Text</type>
</CustomField>