force-app/main/default/objects/Activity/fields/checkInRealizado__c.field-meta.xml
<CustomField>
    <fullName>checkInRealizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check-out realizado</label>
    <type>Checkbox</type>
</CustomField>