force-app/main/default/objects/Activity/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Quando o atribuído nao tiver conta no Salesforce, preencher este campo com o contato, e, o atribuído em nome do gestor.</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>