force-app/main/default/objects/Activity/fields/Criado_por__c.field-meta.xml
<CustomField>
    <fullName>Criado_por__c</fullName>
    <formula>CreatedBy.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Criado por</label>
    <type>Text</type>
</CustomField>