force-app/main/default/objects/Activity/fields/Data_da_Conclusao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Conclusao__c</fullName>
    <label>Data da Conclusão</label>
    <type>Date</type>
</CustomField>