force-app/main/default/objects/Activity/fields/Data_e_Hora_de_Fim__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_de_Fim__c</fullName>
    <label>Data e Hora de Fim</label>
    <type>DateTime</type>
</CustomField>