force-app/main/default/objects/Activity/fields/Data_e_Hora_de_In_cio__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_de_In_cio__c</fullName>
    <label>Data e Hora de Início</label>
    <type>DateTime</type>
</CustomField>