force-app/main/default/objects/Activity/fields/Departamento_do_proprietario__c.field-meta.xml
<CustomField>
    <fullName>Departamento_do_proprietario__c</fullName>
    <formula>TEXT(Owner:User.Departamento3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento do proprietário</label>
    <type>Text</type>
</CustomField>