force-app/main/default/objects/Activity/fields/Departamento_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Solicitante__c</fullName>
    <formula>CreatedBy.Contact.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento Solicitante</label>
    <type>Text</type>
</CustomField>