force-app/main/default/objects/Activity/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <inlineHelpText>Escreva aqui o resultado deste compromisso.</inlineHelpText>
    <label>Feedback</label>
    <type>TextArea</type>
</CustomField>