force-app/main/default/objects/Activity/fields/FeedbackDado__c.field-meta.xml
<CustomField>
    <fullName>FeedbackDado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FeedbackDado</label>
    <type>Checkbox</type>
</CustomField>