force-app/main/default/objects/Activity/fields/Gestor_atual__c.field-meta.xml
<CustomField>
    <fullName>Gestor_atual__c</fullName>
    <formula>$User.Id = ID_do_Gestor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestor atual</label>
    <type>Checkbox</type>
</CustomField>