force-app/main/default/objects/Activity/fields/Inclua_as_demais_informa_es_necess__c.field-meta.xml
<CustomField>
    <fullName>Inclua_as_demais_informa_es_necess__c</fullName>
    <inlineHelpText>Inclua as demais informações necessárias para a resolução da tarefa. Foi realizada alguma diligência ou contato com o cliente nesse meio tempo? Repasse informações completas.</inlineHelpText>
    <label>Inclua as demais informações necessá...?</label>
    <type>TextArea</type>
</CustomField>