force-app/main/default/objects/Activity/fields/Inicio_andamento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_andamento__c</fullName>
    <description>Quando o status mudou pela última vez</description>
    <label>Inicio Em andamento</label>
    <type>DateTime</type>
</CustomField>