force-app/main/default/objects/Activity/fields/integrated__c.field-meta.xml
<CustomField>
    <fullName>integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>integrado ou não</description>
    <label>integrated</label>
    <type>Checkbox</type>
</CustomField>