force-app/main/default/objects/Activity/fields/JuridicoSalvo__c.field-meta.xml
<CustomField>
    <fullName>JuridicoSalvo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar se o assunto do departamento jurídico foi adicionado. TarefaJuridico.cmp.
Há tambem um fluxo que faz cancela a tarefa caso o assunto nao seja adicionado.
Cancela tarefa Jurídico.flow</description>
    <label>JuridicoSalvo</label>
    <type>Checkbox</type>
</CustomField>