force-app/main/default/objects/Activity/fields/justificativa__c.field-meta.xml
<CustomField>
    <fullName>justificativa__c</fullName>
    <label>justificativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem conexão no momento do compromisso</fullName>
            </value>
            <value>
                <fullName>Endereço da conta errado</fullName>
            </value>
            <value>
                <fullName>Localização atual errada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>