force-app/main/default/objects/Activity/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <label>Local</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Externo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>