force-app/main/default/objects/Activity/fields/Membros_da_Atividade__c.field-meta.xml
<CustomField>
    <fullName>Membros_da_Atividade__c</fullName>
    <label>Membros da Atividade</label>
    <type>TextArea</type>
</CustomField>