force-app/main/default/objects/Activity/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meta</label>
    <type>Checkbox</type>
</CustomField>