force-app/main/default/objects/Activity/fields/miri2__Sync_With_MiriCalendar__c.field-meta.xml
<CustomField>
    <fullName>miri2__Sync_With_MiriCalendar__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync With MiriCalendar</label>
    <type>Checkbox</type>
</CustomField>