force-app/main/default/objects/Activity/fields/Nessa_etapa__c.field-meta.xml
<CustomField>
    <fullName>Nessa_etapa__c</fullName>
    <formula>(NOW() -  Ultima_Alter_o_de_status__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nessa etapa à (hh:mm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>