force-app/main/default/objects/Activity/fields/Nome_do_gestor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_gestor__c</fullName>
    <formula>Owner:User.Gestor__r.FirstName + &quot; &quot; + Owner:User.Gestor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do gestor</label>
    <type>Text</type>
</CustomField>