force-app/main/default/objects/Activity/fields/Nome_Formula__c.field-meta.xml
<CustomField>
    <fullName>Nome_Formula__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome (Formula)</label>
    <type>Text</type>
</CustomField>