force-app/main/default/objects/Activity/fields/Per_odo_fechado__c.field-meta.xml
<CustomField>
    <fullName>Per_odo_fechado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sinaliza o fechamento do período</description>
    <inlineHelpText>Sinaliza o fechamento do período</inlineHelpText>
    <label>Período fechado</label>
    <type>Checkbox</type>
</CustomField>