force-app/main/default/objects/Activity/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <formula>IF(
MONTH(ActivityDate) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(ActivityDate)),
TEXT(MONTH(ActivityDate))
)
 + &apos;/&apos; + TEXT(YEAR(ActivityDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período</label>
    <type>Text</type>
</CustomField>