force-app/main/default/objects/Activity/fields/Peso_Meta__c.field-meta.xml
<CustomField>
    <fullName>Peso_Meta__c</fullName>
    <label>Peso da Meta</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>