force-app/main/default/objects/Activity/fields/Prazo_formatado__c.field-meta.xml
<CustomField>
    <fullName>Prazo_formatado__c</fullName>
    <formula>IF(
DAY(ActivityDate) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(ActivityDate)),
TEXT(DAY(ActivityDate))
)
+ &quot;/&quot; +
IF(
MONTH(ActivityDate) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(ActivityDate)),
TEXT(MONTH(ActivityDate))
)
+ &quot;/&quot; +
TEXT(YEAR(ActivityDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo (formatado)</label>
    <type>Text</type>
</CustomField>