force-app/main/default/objects/Activity/fields/Prefixo_do_Referente__c.field-meta.xml
<CustomField>
    <fullName>Prefixo_do_Referente__c</fullName>
    <label>Prefixo do Referente</label>
    <length>3</length>
    <type>Text</type>
</CustomField>