force-app/main/default/objects/Activity/fields/Prioridade_Jur_dico__c.field-meta.xml
<CustomField>
    <fullName>Prioridade_Jur_dico__c</fullName>
    <label>Prioridade Jurídico</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>