force-app/main/default/objects/Activity/fields/Qual_a_data_prevista_para_a_resol__c.field-meta.xml
<CustomField>
    <fullName>Qual_a_data_prevista_para_a_resol__c</fullName>
    <inlineHelpText>Qual a data prevista para a resolução da ocorrência? Exemplo: equipamento será entregue em 12 dias corridos.</inlineHelpText>
    <label>Qual a data prevista para a resol...?</label>
    <type>TextArea</type>
</CustomField>