force-app/main/default/objects/Activity/fields/Qual_o_motivo_do_envio_da_ocorr_nc__c.field-meta.xml
<CustomField>
    <fullName>Qual_o_motivo_do_envio_da_ocorr_nc__c</fullName>
    <inlineHelpText>Qual o motivo do envio da ocorrência pelo cliente? Descreva de forma detalhada e com datas;</inlineHelpText>
    <label>Qual o motivo do envio da ocorrênc...?</label>
    <type>TextArea</type>
</CustomField>