force-app/main/default/objects/Activity/fields/Rota_de_Viagem__c.field-meta.xml
<CustomField>
    <fullName>Rota_de_Viagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rota de Viagem</label>
    <referenceTo>Rota_de_Viagem__c</referenceTo>
    <relationshipLabel>Compromissos</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>