force-app/main/default/objects/Activity/fields/Status_do_gestor__c.field-meta.xml
<CustomField>
    <fullName>Status_do_gestor__c</fullName>
    <label>Status do gestor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NÃO</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>PARCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>