force-app/main/default/objects/Activity/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <formula>SUBSTITUTE(
    SUBSTITUTE(
        SUBSTITUTE(
            SUBSTITUTE(
                SUBSTITUTE(
                    Owner:User.MobilePhone, &quot; &quot;, &quot;&quot;), 
                &quot;(&quot;, &quot;&quot;), 
            &quot;)&quot;, &quot;&quot;), 
        &quot;-&quot;, &quot;&quot;), 
    &quot;+&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone</label>
    <type>Text</type>
</CustomField>