force-app/main/default/objects/Activity/fields/Tempo_de_Conclus_o__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_Conclus_o__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(CreatedDate)),
    NOT(ISBLANK(CompletedDateTime))
  ),
  ROUND(
    ( 
      ( (CompletedDateTime - CreatedDate) * 1440 ) - 
      IF(ISBLANK(Tempo_parado__c), 0, Tempo_parado__c)
    ) / 1440,
    2
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de Conclusão (Dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>