force-app/main/default/objects/Activity/fields/Tempo_de_Conclus_o_Interno__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_Conclus_o_Interno__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(CreatedDate)),
        NOT(ISBLANK(Data_interna__c))
    ),
    ROUND(
        (
            ( 
                Data_interna__c - DATEVALUE(Data_e_Hora_de_In_cio__c) 
            ) * 1440
            - Tempo_parado__c
        ) / 60,
        2
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de Conclusão Interno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>