force-app/main/default/objects/Activity/fields/Tempo_de_execu_o__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_execu_o__c</fullName>
    <label>Tempo de execução</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>