force-app/main/default/objects/Activity/fields/Tempo_de_fechamento__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_fechamento__c</fullName>
    <formula>Data_da_Conclusao__c -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de fechamento (dia)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>