force-app/main/default/objects/Activity/fields/Tempo_parado__c.field-meta.xml
<CustomField>
    <fullName>Tempo_parado__c</fullName>
    <description>Total acumulado em horas em &quot;Aguardando outra pessoa&quot;</description>
    <label>Tempo aguardado (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>