force-app/main/default/objects/Activity/fields/Ultima_Alter_o_de_status__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Alter_o_de_status__c</fullName>
    <label>Ultima Alterção de status</label>
    <type>DateTime</type>
</CustomField>