force-app/main/default/objects/Activity/fields/Ultimo_Status__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Status__c</fullName>
    <label>Ultimo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não iniciado</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Aguardando outra pessoa</fullName>
            </value>
            <value>
                <fullName>Adiado</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Imediato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>