force-app/main/default/objects/Activity/fields/Vencido_h__c.field-meta.xml
<CustomField>
    <fullName>Vencido_h__c</fullName>
    <formula>IF(
    TODAY() &gt; Vencimento__c,
    TODAY() - Vencimento__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencido há (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>