force-app/main/default/objects/Activity/fields/VisitaNaoRealizada__c.field-meta.xml
<CustomField>
    <fullName>VisitaNaoRealizada__c</fullName>
    <description>Visita não foi realizada dentro do prazo de 24 horas</description>
    <formula>AND(
    NOT(checkInRealizado__c),
    NOT(ISBLANK(Data_e_Hora_de_Fim__c )),
    NOW() &gt; ( Data_e_Hora_de_Fim__c + 1)
)</formula>
    <label>VisitaNaoRealizada</label>
    <type>Checkbox</type>
</CustomField>